--- a/share/html/app/share-res.html
+++ b/share/html/app/share-res.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1.0, user-scalable=0;">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <title>百万世界杯</title>
     <link rel="stylesheet" href="../../static/assets/app/styles/index.css"/>
     <script>
         (function () {
@@ -17,11 +18,11 @@
         }());
     </script>
     <script src="../../static/assets/app/require.min.js"
-            data-main="../../static/assets/app/src/controller/index"></script>
+            data-main="../../static/assets/app/dist/index"></script>
 
 </head>
 <body>
-<div class="hide wrapper common-page generalize-wrapper" data-role="page" id="generalize-page" data-title="百万世界杯">
+<div class="wrapper common-page generalize-wrapper" data-role="page" id="generalize-page">
 
     <div role="main" class="layout-content generalize-content">
         <div id="scroller">
