新闻列表不足6条数据，加载下个分页

--- a/list.html
+++ b/list.html
@@ -6,7 +6,6 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <link rel="stylesheet" href="assets/styles/index.min.css"/>
-    <script src="assets/require.min.js" data-main="assets/dist/index"></script>
 </head>
 <body>
 <div class="wrapper" data-role="page" id="list-page">
@@ -83,6 +82,6 @@
     {{ } }}
     {{ } }}
 </script>
-
+<script src="assets/require.min.js" data-main="assets/src/index"></script>
 </body>
 </html>
