聊天室页面

--- a/list.html
+++ b/list.html
@@ -82,6 +82,6 @@
     {{ } }}
     {{ } }}
 </script>
-<script src="assets/require.min.js" data-main="assets/src/index"></script>
+<script src="assets/require.min.js" data-main="assets/dist/index"></script>
 </body>
 </html>
